--- a/resources/scss/_footer.scss
+++ b/resources/scss/_footer.scss
@@ -1,5 +1,5 @@
 .upper-footer {
-    background-image: url('img/footer-bg.jpg');
+    background-image: url('../img/footer-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 3rem 0;
