--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -40,3 +40,10 @@ header {
         }
     }
 }
+
+.jumbotron {
+    background-image: url('../img/jumbotron.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45%;
+}
