--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -1,6 +1,16 @@
-main {
-    color: #fff;
+#movies-list {
+
+    h1 {
+        color: #fff;
+    }
+
+    p {
+        margin-top: 20px;
+        line-height: 25px;
+        color: #fff;
+    }
 }
+
 
 .upper-content {
     background-color: $darkgray;
@@ -17,8 +27,12 @@ main {
             flex-basis: calc(100% / 6);
             padding: 20px;
 
+            a {
+                color: #fff;
+            }
+
             .comic-image {
-                height: 300px;
+                height: 320px;
                 object-fit: cover;
 
             }
@@ -60,6 +74,149 @@ main {
                 height: 60px;
                 margin-right: 10px;
             }
+        }
+    }
+}
+
+#product-description {
+    background-color: $white;
+    padding: 2rem 0;
+
+    .container {
+        width: 1200px;
+    }
+
+    .card-container {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-wrap: wrap;
+
+        .comics-card {
+            flex-basis: 15%;
+
+            .comic-image {
+                height: 320px;
+                object-fit: cover;
+
+            }
+        }
+    }
+}
+
+.details {
+    display: flex;
+
+    h1 {
+        color: #003F5E;
+        font-size: 2rem;
+        text-transform: uppercase;
+        margin-bottom: 1rem;
+    }
+
+    p {
+        line-height: 30px;
+        font-weight: 700;
+    }
+
+    .banner-adv {
+        .adv {
+            width: 1000px;
+        }
+    }
+}
+
+
+#info-section {
+    width: 100%;
+    padding: 20px 0;
+    background-color: #F6F6F6;
+
+    .container {
+        width: 55%;
+    }
+
+    .wrapper {
+        display: flex;
+        gap: 70px;
+
+        .talent {
+
+            .d-flex {
+                align-items: baseline;
+
+                .row {
+                    display: flex;
+                    border-bottom: 1px solid gray;
+                    padding-bottom: 10px;
+
+                    .col {
+                        margin-top: 10px;
+                        flex-basis: 50%;
+
+                        p {
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+
+                        a {
+                            color: #4fc5ec;
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+                    }
+                }
+
+            }
+
+        }
+
+        .specs {
+
+            .d-flex {
+                align-items: baseline;
+
+                .row {
+                    display: flex;
+                    border-bottom: 1px solid gray;
+                    padding-bottom: 10px;
+
+                    .col {
+                        margin-top: 10px;
+                        flex-basis: 50%;
+
+                        p {
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+
+                        .uppercase {
+                            text-transform: uppercase
+                        }
+
+                        a {
+                            color: #4fc5ec;
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+                    }
+                }
+
+            }
+
+        }
+
+        h1 {
+            padding-bottom: 20px;
+            border-bottom: 1px solid gray;
+        }
+
+        ul {
+            list-style: none;
+        }
+
+        .container {
+            width: 50%;
         }
     }
 }
